# resume-tailoring

./: .gitignore  README.md  genAIresume.tex  pyproject.toml  sde.tex
codex/: codex.json
src/: cli.py  codex.py  file_update.py  llm.py  logging_utils.py  models.py  orchestrator.py  prompt_builder.py  validation.py
templates/: llm_prompt.txt
tests/: test_file_update.py  test_orchestrator.py  test_validation.py
