[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-guardrails"
version = "0.1.0"
authors = [{name="Codex Maintainers"}]
description = "Controlled file modification orchestrator with guardrails"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
